# notcurses-snake

./: .clang-format  CMakeLists.txt
src/: game.cpp  game.h  main.cpp
